<resources>
    <string name="apikey">0GnqeXeroFjx1WO86oHtJzekPzOFGJhZmKYDe4A</string>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="app_name">Lindley RTM MMIL_L</string>
    <string name="login_activity_title">Login</string>
    <string name="login_activity_usuario">Usuario:</string>
    <string name="login_activity_usuario_hint">Ingresar Usuario</string>
    <string name="login_activity_password">Password:</string>
    <string name="login_activity_password_hint">Ingresar Password</string>
    <string name="login_activity_btn_ingresar">Ingresar</string>
    <string name="login_activity_no_tiene_acceso">El usuario no tiene acceso.</string>
    <string name="tablero_activity_title">Tablero</string>
    <string name="tablero_grafico_activity_title">Tablero</string>
    <string name="lista_vendedores_activity_title">Vendedores</string>
    <string name="lista_pedidos_activity_title">Pedidos</string>
    <string name="tablero_menu_supervisor">Supervidores</string>
    <string name="tablero_menu_televenta">Televenta</string>
    <string name="tablero_menu_grafico">Gráfico</string>
    <string name="listasupervisores_activity_title">Supervisores</string>
    <string name="listasupervisores_activity_codigo_column">Código</string>
    <string name="listasupervisores_activity_supervisor_column">Supervisor</string>
    <string name="listasupervisores_activity_cuota_column">Cuota</string>
    <string name="listasupervisores_activity_eficienciaglobal_column">Eficiencia Global</string>
    <string name="listasupervisores_activity_planvisitas_column">Plan de Visita</string>
    <string name="listasupervisores_activity_eficienciapreventa_column">Ef. Preventa</string>
    <string name="listasupervisores_activity_clientes_column">Clientes</string>
    <string name="listasupervisores_activity_visitas_column">Visitas</string>
    <string name="listasupervisores_activity_conpedido_column">Con Pedido</string>
    <string name="listasupervisores_activity_sinpedido_column">Sin Pedido</string>
    <string name="listasupervisores_activity_importe_column">Importe</string>
    <string name="listasupervisores_activity_efectivo_column">Efectivo</string>
    <string name="listasupervisores_activity_title_dialog">Seleccionar Supervisor</string>
    <string name="listasupervisores_activity_title_dialog_Aceptar">Aceptar</string>
    <string name="listasupervisores_activity_title_dialog_Cancelar">Cancelar</string>
    <string name="listasupervisores_menu_vendedores">Vendedores</string>
    <string name="listasupervisores_menu_graficos">Gráficos</string>
    <string name="listasupervisores_menu_cuota">Cuota</string>
    <string name="listasupervisores_menu_eficienciaglobal">Eficiencia Global</string>
    <string name="listasupervisores_menu_planvisita">Plan de Visita</string>
    <string name="listasupervisores_menu_eficienciapreventa">Eficiencia Preventa</string>
    <string name="listasupervisores_activity_vendedores_column">Vendedores</string>
    <string name="listavendedores_activity_cuota_column">Cuota</string>
    <string name="listavendedores_activity_eficienciaglobal_column">Eficiencia Global</string>
    <string name="listavendedores_activity_planvisitas_column">Plan de Visita</string>
    <string name="listavendedores_activity_eficienciapreventa_column">Ef. Preventa</string>
    <string name="listavendedores_activity_clientes_column">Clientes</string>
    <string name="listavendedores_activity_visitas_column">Visitas</string>
    <string name="listavendedores_activity_conpedido_column">Con Pedido</string>
    <string name="listavendedores_activity_sinpedido_column">Sin Pedido</string>
    <string name="listavendedores_activity_importe_column">Importe</string>
    <string name="listavendedores_activity_tiempoefectivo_column">T. Efectivo</string>
    <string name="listavendedores_menu_pedidos">Pedidos</string>
    <string name="listavendedores_menu_mapa">Mapa</string>
    <string name="listavendedores_activity_title_dialog">Seleccionar Vendedor</string>
    <string name="lista_televendedores_activity_title">Televendedores</string>
    <string name="listatelevendedores_nombre_column">Televendedor</string>
    <string name="listatelevendedores_primerreg_column">Primer Registro</string>
    <string name="listatelevendedores_ultimoreg_column">Último Registro</string>
    <string name="listatelevendedores_planvisita_column">Plan Visita</string>
    <string name="listatelevendedores_clientes_column">Clientes</string>
    <string name="listatelevendedores_atendidos_column">Atendidos</string>
    <string name="listatelevendedores_sinpedido_column">Sin Pedidos</string>
    <string name="listatelevendedores_importe_column">Importe S/.</string>
    <string name="listatelevendedores_cajasfisicas_column">Cj. Físicas</string>
    <string name="listatelevendedores_cajasunitarias_column">Cj. Unitarias</string>
    <string name="listatelevendedores_tiempoefectivo_column">Tiempor Efectivo</string>
    <string name="login_activity_ok">Bienvenido: %s.</string>
    <string name="login_activity_error">%s</string>
    <string name="login_activity_txtlogin_empty">Debes ingresar tu usuario</string>
    <string name="login_activity_txtpassword_empty">Debes ingresar tu password</string>
    <string name="resumen_venta_activity_title">Resumen de Venta</string>
    <string name="resumen_venta_menu_ventas">Ventas</string>
    <string name="resumen_venta_menu_mercaderista">Mercaderistas</string>
    <string name="resumen_venta_menu_mix">Mix</string>
    <string name="resumen_venta_menu_vendedores">Vendedores</string>
    <string name="resumen_venta_menu_consulta">Consultas</string>
    <string name="resumen_venta_menu_confrontacion">Confrontación</string>
    <string name="resumen_venta_menu_clientescreditos">Cli.Créditos</string>
    <string name="resumen_venta_descripcion_column">Descripción</string>
    <string name="resumen_venta_indicador_column"> </string>
    <string name="resumen_venta_valor_column">Valor</string>
    <string name="resumen_mercaderista_activity_title">Resumen de Mercaderista</string>
    <string name="mix_producto_activity_title">Mix de Productos</string>
    <string name="mix_producto_producto_column">Producto</string>
    <string name="mix_producto_cunitaria_column">C.Unitarias</string>
    <string name="mix_producto_cfisica_column">C.Físicas</string>
    <string name="detalle_pedido_activity_title">Detalle de Pedidos</string>
    <string name="detalle_pedido_column_numero">Número</string>
    <string name="detalle_pedido_column_cliente">Cliente</string>
    <string name="detalle_pedido_column_hora">Hora</string>
    <string name="detalle_pedido_column_estado">Estado</string>
    <string name="detalle_pedido_menu_mapa">Mapa</string>
    <string name="confrontacion_activity_title">Confrontación</string>
    <string name="confrontacion_column_descripcion">Descripción</string>
    <string name="confrontacion_column_monto">%</string>
    <string name="confrontacion_column_supervisor">Supervisor</string>
    <string name="clientecreditos_activity_title">Clientes con Créditos</string>
    <string name="clientecreditos_column_codigo">Código</string>
    <string name="clientecreditos_column_cliente">Cliente</string>
    <string name="clientecreditos_column_disponible">Disponib.</string>
    <string name="clientecreditos_column_vencido">Vencido</string>
    <string name="consultas_activity_cliente">Consultar Cliente</string>
    <string name="consultas_activity_codigo">Código</string>
    <string name="consultas_activity_codigo_hint">Ingresar código Cliente:</string>
    <string name="consultas_activity_consultar">Último Pedido</string>
    <string name="consultas_activity_datos_avance_resumen">Datos Avance Resumen</string>
    <string name="consultas_activity_datos_comerciales">Datos Comerciales</string>
    <string name="consultas_activity_figuras_comerciales">Figuras Comerciales</string>
    <string name="consultas_activity_figuras_profit">Profit</string>
    <string name="consultas_activity_codigo_empty">Debes ingresar el código.</string>
    <string name="consultas_activity_nombre">Nombre</string>
    <string name="consultas_activity_direccion">Dirección</string>
    <string name="consultas_activity_grupo_numero">Numero</string>
    <string name="consultas_activity_grupo_tipo">Tipo</string>
    <string name="consultas_activity_grupo_estado">Estado</string>
    <string name="consultas_activity_grupo_transportista">Transportista</string>
    <string name="consultas_activity_consulta_title">Consulta Cliente</string>
    <string name="profitdatoscomerciales_activity_title_datoscomerciales">Datos Comerciales</string>
    <string name="profitdatoscomerciales_activity_title_avanceresumen">Datos Avance Resumen</string>
    <string name="profitdatoscomerciales_activity_title_figurascomerciales">Figuras Comerciales</string>
    <string name="profitdatoscomerciales_activity_title_profithistory">Profit History</string>
    <string name="profitmensual_activity_title">Profit History</string>
    <string name="profitmensual_activity_tipo">Tipo</string>
    <string name="profitmensual_activity_anio">Año</string>
    <string name="profitmensual_activity_mes">Mes</string>
    <string name="profitmensual_activity_mes_hint">Seleccionar Mes</string>
    <string name="profitmensual_activity_campo">Campo</string>
    <string name="profitmensual_activity_campo_hint">Seleccionar Campo</string>
    <string name="profitmensual_activity_aceptar">Aceptar</string>
    <string-array name="profit_campo">
        <item>Cajas Físicas Acumuladas</item>
        <item>Cajas Unitarias Acumuladas</item>
        <item>Importe Facturado</item>
        <item>Importe Utilidad</item>
    </string-array>
    <string-array name="profit_tipo">
        <item>Histórico Mensual</item>
        <item>Histórico Mensual Comparativo</item>
        <item>Histórico Semanal</item>
    </string-array>
    <string name="resumen_adminfranquicia_column_codigo">Código</string>
    <string name="resumen_adminfranquicia_column_supervisores">Descripción</string>
    <string name="resumen_adminfranquicia_column_avance">Avance</string>
    <string name="resumen_adminfranquicia_column_cuota">Cuota</string>
    <string name="resumen_adminfranquicia_column_vendido">Vendido</string>
    <string name="resumen_adminfranquicia_column_cliprogramados">Cli.Programados</string>
    <string name="resumen_adminfranquicia_column_clivistados">Cli.Vistados</string>
    <string name="resumen_adminfranquicia_column_conpedidos">C/Pedidos</string>
    <string name="resumen_adminfranquicia_column_sinpedidos">S/Pedidos</string>
    <string name="resumen_mercaderista_column_codigo">Código</string>
    <string name="resumen_mercaderista_column_nombre">Descripción</string>
    <string name="resumen_mercaderista_column_programdos">Cli.Programados</string>
    <string name="resumen_mercaderista_column_visitados">Cli.Visitados</string>
    <string name="resumen_mercaderista_column_atendidos">Cli.Atendidos</string>
    <string name="resumen_mercaderista_column_no_atendidos">Cli.No Atendidos</string>
    <string name="resumen_mercaderista_column_tiempo_efectivo">T.Efectivo</string>
    <string name="resumen_mercaderista_column_primer_registro">Pri.Registro</string>
    <string name="resumen_mercaderista_column_ultimo_registro">Ult.Registro</string>
    <string name="resumen_mercaderista_column_porcentaje">% Avance</string>
    <string name="cliente_atendidos_activity_column_codigo">Código</string>
    <string name="cliente_atendidos_activity_column_cliente">Cliente</string>
    <string name="cliente_atendidos_activity_column_direccion">Dirección</string>
    <string name="cliente_atendidos_activity_column_hora_inicio">Hora Inicio</string>
    <string name="cliente_atendidos_activity_column_hora_fin">Hora Fin</string>
    <string name="cliente_atendidos_activity_column_tiempo_efectivo">T.Efectivo</string>
</resources>