<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
        
     
         <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:focusable="false"
 			android:clickable="false"
            android:fillViewport="true">
            
                 <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
 	android:clickable="false"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="1350dip"
                android:layout_height="wrap_content">
        		
                
                 <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
                  <TextView
                android:layout_height="wrap_content"
                android:layout_width="100dip"
                style="@style/TextViewHead"
                android:text="@string/resumen_mercaderista_column_codigo"/>
            
              <TextView
                android:layout_height="wrap_content"
                android:layout_width="250dip"
                style="@style/TextViewHead"
                android:text="@string/resumen_mercaderista_column_nombre"/>
              
                      
               <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                style="@style/TextViewHead"
                android:gravity="left"
                android:text="@string/resumen_mercaderista_column_programdos"/>
               
               <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                style="@style/TextViewHead"
                android:gravity="left"
                android:text="@string/resumen_mercaderista_column_visitados"/>
              
               <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                style="@style/TextViewHead"
                android:gravity="left"
                android:text="@string/resumen_mercaderista_column_atendidos"/>
               
               
 				<TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                style="@style/TextViewHead"
                android:gravity="left"
                android:text="@string/resumen_mercaderista_column_no_atendidos"/>
             
         	
 				<TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                style="@style/TextViewHead"
                android:gravity="left"
                android:text="@string/resumen_mercaderista_column_tiempo_efectivo"/>
             
 				<TextView
                android:layout_height="wrap_content"
                android:layout_width="140dip"
                style="@style/TextViewHead"
                android:gravity="left"
                android:text="@string/resumen_mercaderista_column_primer_registro"/>
 				
 				<TextView
                android:layout_height="wrap_content"
                android:layout_width="140dip"
                style="@style/TextViewHead"
                android:gravity="left"
                android:text="@string/resumen_mercaderista_column_ultimo_registro"/>
 				
 				<TextView
                android:layout_height="wrap_content"
                android:layout_width="100dip"
                style="@style/TextViewHead"
                android:gravity="left"
                android:text="@string/resumen_mercaderista_column_porcentaje"/>
 				
 				<TextView
                android:layout_height="wrap_content"
                android:layout_width="20dip"
                style="@style/TextViewHead"
                android:gravity="left"/>
                    
                  
                     
          
              </TableRow>
             </TableLayout>
              <ListView android:id="@+id/android:list"
		android:clickable="true"
		android:addStatesFromChildren="true"
        android:choiceMode="singleChoice"
       	android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
          
                   
             </LinearLayout>
       </HorizontalScrollView>

</LinearLayout>