<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:layout_margin="1dip">
    
   

      <HorizontalScrollView
          	android:id="@+id/hView"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_margin="1dip"
            android:layout_weight="1"
            android:focusable="false"
 			android:clickable="false"
            android:fillViewport="true">
            
                 <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
 	android:clickable="false"
            android:orientation="vertical" >

                     
                       
                     
            <TableLayout
                android:layout_width="1140dip"
                android:layout_height="wrap_content">
        		
                
                 <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
                     
            
              <TextView
                android:layout_height="wrap_content"
                android:layout_width="50dip"
                android:gravity="left"
                style="@style/TextViewHead"
                android:text="@string/resumen_adminfranquicia_column_codigo"/>
            
              <TextView
                android:layout_height="wrap_content"
                android:layout_width="250dip"
                android:gravity="left"
                style="@style/TextViewHead"
                 android:text="@string/resumen_adminfranquicia_column_supervisores"/>
              
                 
                 
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                android:gravity="left"
                style="@style/TextViewHead"
                android:text="@string/resumen_adminfranquicia_column_avance"/>
            
                    
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                android:gravity="left"
                style="@style/TextViewHead"
                android:text="@string/resumen_adminfranquicia_column_cuota"/>
            
                    
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                android:gravity="left"
                style="@style/TextViewHead"
                android:text="@string/resumen_adminfranquicia_column_vendido"/>
            
                    
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                android:gravity="left"
                style="@style/TextViewHead"
                android:text="@string/resumen_adminfranquicia_column_cliprogramados"/>
            
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                android:gravity="left"
                style="@style/TextViewHead"
                android:text="@string/resumen_adminfranquicia_column_clivistados"/>
            
                 <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                android:gravity="left"
                style="@style/TextViewHead"
                android:text="@string/resumen_adminfranquicia_column_conpedidos"/>
            
                 
                      <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dip"
                android:gravity="left"
                style="@style/TextViewHead"
                android:text="@string/resumen_adminfranquicia_column_sinpedidos"/>
            
            
                        
                            
              </TableRow>
             </TableLayout>
             
              <ListView android:id="@+id/lstDetalle"
				android:clickable="true"
				android:addStatesFromChildren="true"
		        android:choiceMode="singleChoice"
		       	android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
          
                   
             </LinearLayout>
       </HorizontalScrollView>
     
</LinearLayout>