<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="@color/custom_theme_color_blanco"
    android:layout_height="40dip">
    
    <TableRow android:layout_marginLeft="40dip">
    	
        <TextView android:layout_weight="1"  android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/consultas_activity_grupo_numero"/>
	    <TextView android:id="@+id/txtNumero" android:layout_weight="2" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
	</TableRow>
	
     <TableRow android:layout_marginLeft="40dip">
    	
        <TextView android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/consultas_activity_grupo_tipo"/>
	    <TextView android:id="@+id/txtTipo" android:layout_weight="2" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
	</TableRow>
	    
	    <TableRow android:layout_marginLeft="40dip">
    	
        <TextView android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/consultas_activity_grupo_estado"/>
	    <TextView android:id="@+id/txtEstado" android:layout_weight="2" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
	</TableRow>
	
	    <TableRow android:layout_marginLeft="40dip">
    	
        <TextView android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/consultas_activity_grupo_transportista"/>
	    <TextView android:id="@+id/txtTransportista" android:layout_weight="2" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
	</TableRow>
</TableLayout>